<resources>
    <string-array name="tabs_text">
        <item>Mine</item>
        <item>Obtained</item>
    </string-array>
    <string name="app_name">It\'s me</string>
    <string name="social">Social</string>
    <string name="work">Work</string>
    <string name="filter">Filter</string>
    <string name="type">Type:</string>
    <string-array name="spinner_array">
        <item>All</item>
        <item>@string/social</item>
        <item>@string/work</item>
    </string-array>
    <string-array name="spinner_array_select">
        <item>@string/social</item>
        <item>@string/work</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_card">Add new card</string>
    <string name="receive_card">Receive card</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="details">Details</string>
    <string name="refresh">Refresh</string>
    <string name="wait_for_connections">Wait for connections</string>
    <string name="name_s">First name:</string>
    <string name="type_s">Type:</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="hide">hide</string>
    <string name="add">add</string>
    <string name="save">save</string>
    <string name="cell">cell</string>
    <string name="email">email</string>
    <string name="web">web page</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="surname">Last name:</string>

    <plurals name="elements">
        <item quantity="one"> %d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <string name="new_short">new card</string>
    <string name="new_long">create new card</string>
    <string name="get_short">get card</string>
    <string name="get_long">get card with bluetooth</string>
    <string name="name_par">Name: %s</string>
    <string name="type_par">Type: %s</string>
    <string name="app_widget_description">app widget</string>
    <string name="app_widget_configuration">App widget configuration</string>
    <string name="bluetooth_research">Bluetooth research</string>
    <string name="received_business_card">Received business card</string>
    <string name="add_business_card">Add business card</string>
    <string name="insert_par">Insert %s</string>
    <string name="insert">Insert</string>
    <string name="cancel">Cancel</string>
    <string name="fail_file">Fail to read file</string>
    <string name="bluetooth_cancel">Bluetooth has not been enable</string>
    <string name="bluetooth_enable">Bluetooth has been enable</string>
    <string name="bluetooth_disable">Bluetooth enabling has been disable</string>
    <string name="permission_request">Permission request</string>
    <string name="location_info">Location permission needed</string>
    <string name="sent">sent</string>
    <string name="no_bluetooth">this device doesn\'t support bluetooth</string>
    <string name="bluetooth_required">Bluetooth required</string>
    <string name="bluetooth_permission">Bluetooth permission required</string>
    <string name="location_permission">Localization Permission</string>
    <string name="loaction_info">This app request to access to you position to find other device</string>
    <string name="error">Error</string>
    <string name="error_info">Incomplete business card.\nYou must insert a first name, a last name add, at last one element</string>
    <string name="ok">OK</string>
    <string name="file_not_found">file not found</string>
    <string name="connected">connected</string>
    <string name="not_connected">not connected</string>
    <string name="keep">Keep</string>
    <string name="delete_info">"Do you want to delete %s from %s"</string>
    <string name="error_action">Unable to execute the action</string>
    <string name="no">No</string>
    <string name="delete_card">Do you want to delete this card?</string>
    <string name="unsave_changes">Unsaved changes</string>
    <string name="changes_info">Do you want to forget the changes?</string>
    <string name="forget">Forget</string>
    <string name="search">search</string>
    <string name="card_not_found">card not found</string>
</resources>