<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.ItsMe.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.ItsMe.AppWidgetContainer"
    android:id="@+id/layout">

        <TextView
            android:id="@+id/appwidget_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/name_par"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/appwidget_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/type_par"
            android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_baseline_call_24"
            android:contentDescription="@string/cell" />

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/email" />

        <ImageView
            android:id="@+id/webIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_web_24"
            android:contentDescription="@string/web" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_facebook_24"
            android:contentDescription="@string/facebook" />

        <ImageView
            android:id="@+id/instagramIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_instagram_24"
            android:contentDescription="@string/instagram" />

    </LinearLayout>

    <Button
        android:id="@+id/detailsButton"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/details"
        android:drawableStart="@drawable/ic_baseline_list_24" />
</LinearLayout>