<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="0dp"
    app:strokeColor="@color/stroke_color"
    app:strokeWidth="1dp"
    tools:context=".recyclerview.card.CardViewHolder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:icon="@drawable/ic_baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>


        <!-- Title, secondary and supporting text -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/name_par"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteButton" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Type_par"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintStart_toStartOf="@+id/name_view"
            app:layout_constraintTop_toBottomOf="@+id/name_view" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/phoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_call_24"
            app:layout_constraintStart_toStartOf="@+id/type_view"
            app:layout_constraintTop_toBottomOf="@+id/type_view" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/emailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_email_24"
            app:layout_constraintBottom_toBottomOf="@+id/phoneIcon"
            app:layout_constraintStart_toEndOf="@+id/phoneIcon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/webIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_web_24"
            app:layout_constraintBottom_toBottomOf="@+id/emailIcon"
            app:layout_constraintStart_toEndOf="@+id/emailIcon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/facebookIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_facebook_24"
            app:layout_constraintBottom_toBottomOf="@+id/webIcon"
            app:layout_constraintStart_toEndOf="@+id/webIcon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/instagramIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_instagram_24"
            app:layout_constraintBottom_toBottomOf="@+id/facebookIcon"
            app:layout_constraintStart_toEndOf="@+id/facebookIcon" />

        <!-- Buttons -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detailsButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/details"
            app:icon="@drawable/ic_baseline_list_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/type_view"
            app:layout_constraintTop_toBottomOf="@+id/phoneIcon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/share"
            app:icon="@drawable/ic_baseline_share_24"
            app:layout_constraintBottom_toBottomOf="@id/detailsButton"
            app:layout_constraintStart_toEndOf="@+id/detailsButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/send"
            app:icon="@drawable/ic_baseline_bluetooth_24"
            app:layout_constraintBottom_toBottomOf="@id/detailsButton"
            app:layout_constraintStart_toEndOf="@+id/shareButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>